Update list of labels that are enabled by default (#316)
Closes #288

CLIENT_NAME, SERVER_NAME and NAMESPACE should be enabled by default (low cardinality).

However, since users don't always set them, the tag will be added only if the value is not blank.

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>